; ModuleID = '/home/carl/AnghaBench/esp-idf/components/freemodbus/modbus/extr_mb.c_eMBDisable.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/freemodbus/modbus/extr_mb.c_eMBDisable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@eMBState = common dso_local global i64 0, align 8
@STATE_ENABLED = common dso_local global i64 0, align 8
@STATE_DISABLED = common dso_local global i64 0, align 8
@MB_ENOERR = common dso_local global i32 0, align 4
@MB_EILLSTATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @eMBDisable() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @eMBState, align 8
  %3 = load i64, i64* @STATE_ENABLED, align 8
  %4 = icmp eq i64 %2, %3
  br i1 %4, label %5, label %9

5:                                                ; preds = %0
  %6 = call i32 (...) @pvMBFrameStopCur()
  %7 = load i64, i64* @STATE_DISABLED, align 8
  store i64 %7, i64* @eMBState, align 8
  %8 = load i32, i32* @MB_ENOERR, align 4
  store i32 %8, i32* %1, align 4
  br label %18

9:                                                ; preds = %0
  %10 = load i64, i64* @eMBState, align 8
  %11 = load i64, i64* @STATE_DISABLED, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %9
  %14 = load i32, i32* @MB_ENOERR, align 4
  store i32 %14, i32* %1, align 4
  br label %17

15:                                               ; preds = %9
  %16 = load i32, i32* @MB_EILLSTATE, align 4
  store i32 %16, i32* %1, align 4
  br label %17

17:                                               ; preds = %15, %13
  br label %18

18:                                               ; preds = %17, %5
  %19 = load i32, i32* %1, align 4
  ret i32 %19
}

declare dso_local i32 @pvMBFrameStopCur(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
